fixed messages not showing when message is clicked on profiles

--- a/www/css.css
+++ b/www/css.css
@@ -2,13 +2,13 @@
     --teal: rgb(183, 202, 193);
 }
 body {
-    min-height: 900px;
+    min-height: 1000px;
     background-color:white;
     overflow-x: scroll;
 
   }
 .innerwrapper {
-    width: 1100px;
+    width: 90%;
     min-height: 900px;
     background-color: var(--teal);
     color:black;
@@ -62,7 +62,7 @@ body {
 }
 
 hr.hr-navbar {
-    border-top: .5px solid black;
+    border-top: 2px solid black;
 }
 
 .bottompad{
@@ -90,6 +90,7 @@ hr.hr-navbar {
     color: black;
     font-family: sans-serif;
     text-decoration: none;
+    font-weight: bolder;
 }
 
 .logo a:hover {
@@ -331,7 +332,7 @@ input[type="submit"]:hover {
     box-sizing: border-box;
 }
 .cont{
-    width: 60%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
